# Gmail-Project

./: .gitignore  CMakeLists.txt  Dockerfile  Dockerfile.client  Dockerfile.server  Dockerfile.test  README.md  docker-compose.yml
api/: app.js  package-lock.json  package.json
api/src/controllers/: LabelController.js  MailController.js  TokenController.js  UserController.js
api/src/middleware/: authMiddleware.js
api/src/models/: Mail.js
api/src/routes/: userRoutes.js
api/src/services/: LabelService.js  MailService.js  UserService.js
api/src/utils/: authHelper.js
backend/: CMakeLists.txt  Dockerfile.tcpserver
backend/src/: main.cpp
backend/src/Commands/: GetCommand.cpp
backend/src/Server/: ConnectionHandler.cpp
frontend/src/: styles.css
frontend/src/components/mail/: ComposeMail.jsx  MailActions.jsx  MailCard.jsx  MailDetail.jsx  MailView.jsx  SearchResults.jsx
frontend/src/components/sidebar/: ComposeButton.jsx  LabelItem.jsx
frontend/src/middlewares/: PrivateRoute.js
frontend/src/styles/mails/: MailCard.css  MailDetail.css  MailsList.css
frontend/src/utils/: mailActionsHelper.js
src/: BloomFilter.cpp  BloomFilter.h  InputValidator.cpp  InputValidator.h  main.cpp
src/Client/: Client.py
src/Server/: ConnectionHandler.cpp  ConnectionHandler.h  Server.cpp  Server.h
tests/: bloom_add_check_tests.cpp  bloom_core_tests.cpp  bloom_save_load_tests.cpp  cli_integration_tests.cpp  input_validator_tests.cpp  run_all.sh  server_args_tests.cpp  socket_integration_tests.cpp
